modified register and login security